Adds stack and some fixes

--- a/source/index.html
+++ b/source/index.html
@@ -23,12 +23,6 @@
           srcset="img/header-logo-tablet.svg" width="174" height="152">
           <img class="logo__icon" src="img/header-logo-mobile.svg" width="191" height="38" alt="Логотип Cat Energy.">
         </picture>
-        <!-- <svg class="logo__icon" aria-hidden="true" focusable="false" width="34" height="38">
-          <use xlink:href="img/sprite.svg#logo-icon"></use>
-        </svg>
-        <svg class="logo__letter" aria-hidden="true" focusable="false" width="101" height="18">
-          <use xlink:href="img/sprite.svg#logo-letter"></use>
-        </svg> -->
       </a>
       <nav class="main-nav main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" aria-label="Открыть меню.">
@@ -120,14 +114,11 @@
           <div class="example__after-wrapper">
           </div>
           <button class="example__button" aria-label="Подвиньте вправо или влево.">
-            <picture>
+            <!-- <picture>
               <source media="(min-width: 768px)"
               srcset="img/slider-tablet.svg" width="40" height="512">
               <img src="img/slider-mobile.svg" width="40" height="256">
-            </picture>
-            <!-- <svg width="40" height="256" viewBox="0 0 40 256" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <use xlink:href="img/sprite.svg#slider"></use>
-            </svg> -->
+            </picture> -->
           </button>
         </div>
       </div>
@@ -146,40 +137,16 @@
   </main>
   <footer class="footer">
     <div class="footer__container">
-      <a class="logo logo--letter" href="index.html">
-        <svg width="129" height="24" aria-hidden="true" focusable="false" viewBox="0 0 129 24" fill="currentColor">
-          <use xlink:href="img/sprite.svg#logo-footer"></use>
-        </svg>
-      </a>
+      <a class="logo logo--letter" href="index.html"></a>
       <div class="social">
-        <a class="social__link social__link--vk" href="https://vk.com/htmlacademy" aria-label="Вконтакте.">
-          <svg aria-hidden="true" focusable="false" width="28" height="17">
-            <use xlink:href="img/sprite.svg#vk-icon"></use>
-          </svg>
-        </a>
+        <a class="social__link social__link--vk" href="https://vk.com/htmlacademy" aria-label="Вконтакте."></a>
         <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru"
-          aria-label="Ютуб.">
-          <svg aria-hidden="true" focusable="false" width="25" height="19" viewBox="0 0 25 19">
-            <use xlink:href="img/sprite.svg#youtube-icon"></use>
-          </svg>
-        </a>
-        <a class=" social__link social__link--telegram" href="https://t.me/htmlacademy" aria-label="Телеграм.">
-          <svg aria-hidden="true" focusable="false" width="21" height="18" viewBox="0 0 21 18">
-            <use xlink:href="img/sprite.svg#telegram-icon"></use>
-          </svg>
-        </a>
+          aria-label="Ютуб."></a>
+        <a class=" social__link social__link--telegram" href="https://t.me/htmlacademy" aria-label="Телеграм."></a>
       </div>
       <div class="footer__academy-logo-wrapper">
-        <a class="footer__academy-logo-letter" href="https://htmlacademy.ru/">
-          <svg aria-hidden="true" focusable="false" width="112" height="15">
-            <use xlink:href="img/sprite.svg#htmlacademy-logo-letter"></use>
-          </svg>
-        </a>
-        <a class="footer__academy-logo" href="https://htmlacademy.ru/">
-          <svg width="27" height="35" viewBox="0 0 27 35">
-            <use xlink:href="img/sprite.svg#htmlacademy-logo"></use>
-          </svg>
-        </a>
+        <a class="footer__academy-logo-letter" href="https://htmlacademy.ru/"></a>
+        <a class="footer__academy-logo" href="https://htmlacademy.ru/"></a>
       </div>
     </div>
   </footer>
