--- a/source/catalog.html
+++ b/source/catalog.html
@@ -41,6 +41,10 @@
       <article class="product-card">
         <div class="product-card__illustration">
           <picture>
+            <source type="image/webp" media="(min-width: 768px)"
+            srcset="img/pro500chicken-tablet.webp 1x, img/pro500chicken-tablet@2x.webp 2x" width="161" height="172">
+            <source type="image/webp"
+            srcset="img/pro500chicken-tablet.webp 1x, img/pro500chicken-tablet@2x.webp 2x" width="161" height="172">
             <source media="(min-width: 768px)"
               srcset="img/pro500chicken-tablet.png 1x, img/pro500chicken-tablet@2x.png 2x" width="161" height="172">
             <img class="product-card__image" src="img/pro500chicken-mobile.png" srcset="img/pro500chicken-mobile@2x.png"
@@ -296,40 +300,16 @@
   </main>
   <footer class="footer">
     <div class="footer__container">
-      <a class="logo logo--letter" href="index.html">
-        <svg width="129" height="24" aria-hidden="true" focusable="false" viewBox="0 0 129 24" fill="currentColor">
-          <use xlink:href="img/sprite.svg#logo-footer"></use>
-        </svg>
-      </a>
+      <a class="logo logo--letter" href="index.html"></a>
       <div class="social">
-        <a class="social__link social__link--vk" href="https://vk.com/htmlacademy" aria-label="Вконтакте.">
-          <svg aria-hidden="true" focusable="false" width="28" height="17">
-            <use xlink:href="img/sprite.svg#vk-icon"></use>
-          </svg>
-        </a>
+        <a class="social__link social__link--vk" href="https://vk.com/htmlacademy" aria-label="Вконтакте."></a>
         <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru"
-          aria-label="Ютуб.">
-          <svg aria-hidden="true" focusable="false" width="25" height="19" viewBox="0 0 25 19">
-            <use xlink:href="img/sprite.svg#youtube-icon"></use>
-          </svg>
-        </a>
-        <a class=" social__link social__link--telegram" href="https://t.me/htmlacademy" aria-label="Телеграм.">
-          <svg aria-hidden="true" focusable="false" width="21" height="18" viewBox="0 0 21 18">
-            <use xlink:href="img/sprite.svg#telegram-icon"></use>
-          </svg>
-        </a>
+          aria-label="Ютуб."></a>
+        <a class=" social__link social__link--telegram" href="https://t.me/htmlacademy" aria-label="Телеграм."></a>
       </div>
       <div class="footer__academy-logo-wrapper">
-        <a class="footer__academy-logo-letter" href="https://htmlacademy.ru/">
-          <svg aria-hidden="true" focusable="false" width="112" height="15">
-            <use xlink:href="img/sprite.svg#htmlacademy-logo-letter"></use>
-          </svg>
-        </a>
-        <a class="footer__academy-logo" href="https://htmlacademy.ru/">
-          <svg width="27" height="35" viewBox="0 0 27 35">
-            <use xlink:href="img/sprite.svg#htmlacademy-logo"></use>
-          </svg>
-        </a>
+        <a class="footer__academy-logo-letter" href="https://htmlacademy.ru/"></a>
+        <a class="footer__academy-logo" href="https://htmlacademy.ru/"></a>
       </div>
     </div>
   </footer>
