Adds fixes for index pixel perfect

--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
       <a class="logo" href="index.html">
         <picture>
           <source media="(min-width: 1200px)"
-          scrset="img/header-logo-desktop.svg" width="202" height="59">
+          srcset="img/header-logo-desktop.svg" width="202" height="59">
           <source media="(min-width: 768px)"
           srcset="img/header-logo-tablet.svg" width="174" height="152">
           <img class="logo__icon" src="img/header-logo-mobile.svg" width="191" height="38" alt="Логотип Cat Energy.">
@@ -81,7 +81,7 @@
             функциональное питание.
           </li>
           <li class="advantages__item advantages__item--fast-result">Уже через месяц наслаждайтесь изменениями к лучшему
-            вашего питомца!
+            вашего&nbsp;питомца!
           </li>
         </ul>
       </div>
@@ -114,19 +114,14 @@
           <div class="example__after-wrapper">
           </div>
           <button class="example__button" aria-label="Подвиньте вправо или влево.">
-            <!-- <picture>
-              <source media="(min-width: 768px)"
-              srcset="img/slider-tablet.svg" width="40" height="512">
-              <img src="img/slider-mobile.svg" width="40" height="256">
-            </picture> -->
           </button>
         </div>
       </div>
     </section>
     <section class="invite-dealers">
       <div class="invite-dealers__wrapper">
-        <h3 class="invite-dealers__title">Приглашаем к сотрудничеству дилеров!</h3>
-        <p class="invite-dealers__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        <h3 class="invite-dealers__title">Приглашаем<br> к сотрудничеству дилеров!</h3>
+        <p class="invite-dealers__address"><span>ул. Большая Конюшенная, д. 19/8</span> <span>Санкт-Петербург</span></p>
       </div>
       <div class="invite-dealers__map-wrapper">
         <iframe
