Adds fixes for catalogs pixel-perfect

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -18,7 +18,7 @@
       <a class="logo" href="index.html">
         <picture>
           <source media="(min-width: 1200px)"
-          scrset="img/header-logo-desktop.svg" width="202" height="59">
+          srcset="img/header-logo-desktop.svg" width="202" height="59">
           <source media="(min-width: 768px)"
           srcset="img/header-logo-tablet.svg" width="174" height="152">
           <img class="logo__icon" src="img/header-logo-mobile.svg" width="191" height="38" alt="Логотип Cat Energy.">
@@ -44,11 +44,11 @@
             <source type="image/webp" media="(min-width: 768px)"
             srcset="img/pro500chicken-tablet.webp 1x, img/pro500chicken-tablet@2x.webp 2x" width="161" height="172">
             <source type="image/webp"
-            srcset="img/pro500chicken-tablet.webp 1x, img/pro500chicken-tablet@2x.webp 2x" width="161" height="172">
+            srcset="img/pro500chicken-tablet.webp 1x, img/pro500chicken-tablet@2x.webp 2x" width="68" height="86">
             <source media="(min-width: 768px)"
               srcset="img/pro500chicken-tablet.png 1x, img/pro500chicken-tablet@2x.png 2x" width="161" height="172">
-            <img class="product-card__image" src="img/pro500chicken-mobile.png" srcset="img/pro500chicken-mobile@2x.png"
-              width="68" height="86" alt="Изображение продукта Cat Energy Pro 500г.">
+            <img class="product-card__image" src="img/pro500chicken-mobile.png" width="68" height="86"  srcset="img/pro500chicken-mobile@2x.png"
+              alt="Изображение продукта Cat Energy Pro 500г.">
           </picture>
         </div>
         <h2 class="product-card__title">Cat Energy Pro 500г</h2>
@@ -71,6 +71,12 @@
       <article class="product-card">
         <div class="product-card__illustration">
           <picture>
+            <source type="image/webp" media="(min-width: 1200px)"
+            srcset="img/pro1000chicken-tablet.webp 1x, img/pro1000chicken-tablet@2x.webp 2x" width="172" height="196">
+            <source type="image/webp" media="(min-width: 768px)"
+            srcset="img/pro1000chicken-tablet.webp 1x, img/pro1000chicken-tablet@2x.webp 2x" width="168" height="200">
+            <source type="image/webp"
+            srcset="img/pro1000chicken-tablet.webp 1x, img/pro1000chicken-tablet@2x.webp 2x" width="68" height="86">
             <source media="(min-width: 1200px)"
               srcset="img/pro1000chicken-desktop.png 1x, img/pro1000chicken-desktop@2x.png 2x" width="172" height="196">
             <source media="(min-width: 768px)"
@@ -245,7 +251,7 @@
         <h2 class="product-card-additional__title">Сахарозаменитель</h2>
         <table class="product-card-additional__description">
           <tr>
-            <th>1 упаковка(100 г)</th>
+            <th>1 упаковка (100 г)</th>
             <td>200 ₽</td>
           </tr>
         </table>
@@ -275,21 +281,20 @@
         <h2 class="product-card-additional__title">Витамины</h2>
         <table class="product-card-additional__description">
           <tr>
-            <th>1 упаковка(30 г)</th>
+            <th>1 упаковка (30 г)</th>
             <td>300 ₽</td>
           </tr>
         </table>
         <a class="product-card-additional__button button" href="#">Заказать</a>
       </article>
       <article class="promotion" aria-label="Акция">
-        <!-- <img src="" width="" height="" alt="Портфель-переноска для котов"> -->
         <p class="promotion__description">Закажите все и&nbsp;получите чехол для кота в подарок!</p>
       </article>
     </section>
     <section class="invite-dealers invite-dealers--secondary">
       <div class="invite-dealers__wrapper">
-        <h3 class="invite-dealers__title">Приглашаем к сотрудничеству дилеров!</h3>
-        <p class="invite-dealers__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        <h3 class="invite-dealers__title">Приглашаем<br> к сотрудничеству дилеров!</h3>
+        <p class="invite-dealers__address"><span>ул. Большая Конюшенная, д. 19/8</span> <span>Санкт-Петербург</span></p>
       </div>
       <div class="invite-dealers__map-wrapper">
         <iframe
