--- a/source/form.html
+++ b/source/form.html
@@ -18,7 +18,7 @@
       <a class="logo" href="index.html">
         <picture>
           <source media="(min-width: 1200px)"
-          scrset="img/header-logo-desktop.svg" width="202" height="59">
+          srcset="img/header-logo-desktop.svg" width="202" height="59">
           <source media="(min-width: 768px)"
           srcset="img/header-logo-tablet.svg" width="174" height="152">
           <img class="logo__icon" src="img/header-logo-mobile.svg" width="191" height="38" alt="Логотип Cat Energy.">
@@ -101,8 +101,8 @@
     </form>
     <section class="invite-dealers invite-dealers--secondary">
       <div class="invite-dealers__wrapper">
-        <h3 class="invite-dealers__title">Приглашаем к сотрудничеству дилеров!</h3>
-        <p class="invite-dealers__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        <h3 class="invite-dealers__title">Приглашаем<br> к сотрудничеству дилеров!</h3>
+        <p class="invite-dealers__address"><span>ул. Большая Конюшенная, д. 19/8</span> <span>Санкт-Петербург</span></p>
       </div>
       <div class="invite-dealers__map-wrapper">
         <iframe
