Adds fixes for form pixel-perfect

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -44,7 +44,7 @@
             <source type="image/webp" media="(min-width: 768px)"
             srcset="img/pro500chicken-tablet.webp 1x, img/pro500chicken-tablet@2x.webp 2x" width="161" height="172">
             <source type="image/webp"
-            srcset="img/pro500chicken-tablet.webp 1x, img/pro500chicken-tablet@2x.webp 2x" width="68" height="86">
+            srcset="img/pro500chicken-mobile.webp 1x, img/pro500chicken-mobile@2x.webp 2x" width="68" height="86">
             <source media="(min-width: 768px)"
               srcset="img/pro500chicken-tablet.png 1x, img/pro500chicken-tablet@2x.png 2x" width="161" height="172">
             <img class="product-card__image" src="img/pro500chicken-mobile.png" width="68" height="86"  srcset="img/pro500chicken-mobile@2x.png"
@@ -72,11 +72,11 @@
         <div class="product-card__illustration">
           <picture>
             <source type="image/webp" media="(min-width: 1200px)"
-            srcset="img/pro1000chicken-tablet.webp 1x, img/pro1000chicken-tablet@2x.webp 2x" width="172" height="196">
+            srcset="img/pro1000chicken-desktop.webp 1x, img/pro1000chicken-desktop@2x.webp 2x" width="172" height="196">
             <source type="image/webp" media="(min-width: 768px)"
             srcset="img/pro1000chicken-tablet.webp 1x, img/pro1000chicken-tablet@2x.webp 2x" width="168" height="200">
             <source type="image/webp"
-            srcset="img/pro1000chicken-tablet.webp 1x, img/pro1000chicken-tablet@2x.webp 2x" width="68" height="86">
+            srcset="img/pro1000chicken-mobile.webp 1x, img/pro1000chicken-mobile@2x.webp 2x" width="84" height="100">
             <source media="(min-width: 1200px)"
               srcset="img/pro1000chicken-desktop.png 1x, img/pro1000chicken-desktop@2x.png 2x" width="172" height="196">
             <source media="(min-width: 768px)"
@@ -105,6 +105,10 @@
       <article class="product-card">
         <div class="product-card__illustration">
           <picture>
+            <source type="image/webp" media="(min-width: 768px)"
+            srcset="img/pro500fish-tablet.webp 1x, img/pro500fish-tablet@2x.webp 2x" width="163" height="174">
+            <source type="image/webp"
+            srcset="img/pro500fish-mobile.webp 1x, img/pro500fish-mobile@2x.webp 2x" width="68" height="78">
             <source media="(min-width: 768px)" srcset="img/pro500fish-tablet.png 1x, img/pro500fish-tablet@2x.png 2x"
               width="163" height="174">
             <img class="product-card__image" src="img/pro500fish-mobile.png" width="68" height="78"
@@ -131,6 +135,12 @@
       <article class="product-card">
         <div class="product-card__illustration">
           <picture>
+            <source type="image/webp" media="(min-width: 1200px)"
+            srcset="img/pro1000fish-desktop.webp 1x, img/pro1000fish-desktop@2x.webp 2x" width="172" height="196">
+            <source type="image/webp" media="(min-width: 768px)"
+            srcset="img/pro1000fish-tablet.webp 1x, img/pro1000fish-tablet@2x.webp 2x" width="168" height="200">
+            <source type="image/webp"
+            srcset="img/pro1000fish-mobile.webp 1x, img/pro1000fish-mobile@2x.webp 2x" width="84" height="100">
             <source media="(min-width: 1200px)"
               srcset="img/pro1000fish-desktop.png 1x, img/pro1000fish-desktop@2x.png 2x" width="172" height="196">
             <source media="(min-width: 768px)" srcset="img/pro1000fish-tablet.png 1x, img/pro1000fish-tablet@2x.png 2x"
@@ -159,6 +169,10 @@
       <article class="product-card">
         <div class="product-card__illustration">
           <picture>
+            <source type="image/webp" media="(min-width: 768px)"
+            srcset="img/slim500buckwheat-tablet.webp 1x, img/slim500buckwheat-tablet@2x.webp 2x" width="161" height="171">
+            <source type="image/webp"
+            srcset="img/slim500buckwheat-mobile.webp 1x, img/slim500buckwheat-mobile@2x.webp 2x" width="68" height="78">
             <source media="(min-width: 768px)"
               srcset="img/slim500buckwheat-tablet.png 1x, img/slim500buckwheat-tablet@2x.png 2x" width="161"
               height="171">
@@ -186,6 +200,12 @@
       <article class="product-card">
         <div class="product-card__illustration">
           <picture>
+            <source type="image/webp" media="(min-width: 1200px)"
+            srcset="img/slim1000buckwheat-desktop.webp 1x, img/slim1000buckwheat-desktop@2x.webp 2x" width="172" height="196">
+            <source type="image/webp" media="(min-width: 768px)"
+            srcset="img/slim1000buckwheat-tablet.webp 1x, img/slim1000buckwheat-tablet@2x.webp 2x" width="168" height="200">
+            <source type="image/webp"
+            srcset="img/slim1000buckwheat-mobile.webp 1x, img/slim1000buckwheat-mobile@2x.webp 2x" width="84" height="100">
             <source media="(min-width: 1200px)"
               srcset="img/slim1000buckwheat-desktop.png 1x, img/slim1000buckwheat-desktop@2x.png 2x" width="172"
               height="196">
@@ -216,6 +236,10 @@
       <article class="product-card">
         <div class="product-card__illustration">
           <picture>
+            <source type="image/webp" media="(min-width: 768px)"
+            srcset="img/slim500rice-tablet.webp 1x, img/slim500rice-tablet@2x.webp 2x" width="163" height="174">
+            <source type="image/webp"
+            srcset="img/slim500rice-mobile.webp 1x, img/slim500rice-mobile@2x.webp 2x" width="72" height="84">
             <source media="(min-width: 768px)" srcset="img/slim500rice-tablet.png 1x, img/slim500rice-tablet@2x.png 2x"
               width="163" height="174">
             <img class="product-card__image" src="img/slim500rice-mobile.png" width="72" height="84"
